Resolve issue where card images strecthing and making them distorted with help from stack overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -214,11 +214,13 @@ body {
 /* --- Recipe Cards  --- */
 
 .card-body {
-    height: 500px;
+    height: 60vh;
 }
 
 .card-img-top {
-    max-height: 300px;
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 500px) {
